--- a/css/agency_v4.css
+++ b/css/agency_v4.css
@@ -277,7 +277,7 @@ header.masthead .intro-text .intro-heading {
     font-size: 36px;
     font-weight: 700;
     line-height: 75px;
-    margin-bottom: 150px;
+    margin-bottom: 250px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   }
 }
@@ -460,7 +460,7 @@ header.masthead .intro-text .intro-heading {
 .timeline > li {
   position: relative;
   min-height: 50px;
-  margin-bottom: 50px;
+  margin-bottom: 25px;
 }
 
 .timeline > li:after, .timeline > li:before {
@@ -505,7 +505,7 @@ header.masthead .intro-text .intro-heading {
   color: white;
   border: 7px solid #e9ecef;
   border-radius: 100%;
-  background-color: #EB1C24;
+  background-color: white;
 }
 
 .timeline > li .timeline-image h4 {
@@ -558,7 +558,7 @@ header.masthead .intro-text .intro-heading {
   }
   .timeline > li {
     min-height: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 0px;
   }
   .timeline > li .timeline-panel {
     float: left;
@@ -592,9 +592,9 @@ header.masthead .intro-text .intro-heading {
     padding: 0 20px 20px;
   }
   .timeline > li .timeline-image {
-    width: 150px;
-    height: 150px;
-    margin-left: -75px;
+    width: 120px;
+    height: 120px;
+    margin-left: -60px;
   }
   .timeline > li .timeline-image h4 {
     font-size: 18px;
@@ -614,9 +614,9 @@ header.masthead .intro-text .intro-heading {
     padding: 0 20px 20px 100px;
   }
   .timeline > li .timeline-image {
-    width: 170px;
-    height: 170px;
-    margin-left: -85px;
+    width: 120px;
+    height: 120px;
+    margin-left: -60px;
   }
   .timeline > li .timeline-image h4 {
     margin-top: 40px;
